# CopyToMe

./: .gitignore  AGENTS.md  CLAUDE.md  INJECTION_GUIDE.md  README.md  UPDATE_LATEST.md  deploy.js  index.html  latest.json  package-lock.json  package.json  vite.config.js  website.dump.html  website.guide.html  website.html
src/: App.vue  main.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: global.css
src/components/: About.vue  History.vue  Home.vue  NotificationView.vue  Notifications.vue  Setting.vue  Tutorial.vue  Update.vue
src/components/common/: StatusTag.vue
src/composables/: aiMg.js  notificationMg.js  setMg.js  useAI.js  useSettings.js  useShortcuts.js
src/constants/: config.js
src/utils/: common.js  crypto.js  mitt.js  shortcutFormat.js  textProcessing.js
website/: website.dump.html  website.guide.html  website.html
